# github-star-organizer

./: .gitignore  GITHUB-ACTIONS.md  README.md  config.example.toml  pyproject.toml
.github/workflows/: organize.yml
src/star_organizer/: cache.py  config.py  github_api.py  github_web.py  llm.py  main.py  models.py
