[project]
name = "github-star-organizer"
version = "0.1.0"
description = "Organize GitHub starred repos into Star Lists using LLM categorization"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "openai>=1.0",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/star_organizer"]

[project.scripts]
star-organizer = "star_organizer.main:main"
